Cập nhật nội dung và giao diện

--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
                         <div class="col span-2-of-3 skill-bg">
                             <div class="skill-fg" style="width: 80%;"></div>
                         </div>
-                        
+                    </div>                        
             </div>
 
         </div>
 
-
+        </div>
         <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
     </body>
 </html>
