Cập nhật nội dung và giao diện

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,300&display=swap" rel="stylesheet">
     
         <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicons/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/resources/favicons/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/resources/favicons/favicon-16x16.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="blob:https://www.facebook.com/f52d8022-bd03-4773-803a-9e7606b07524">
+        <link rel="icon" type="image/png" sizes="16x16" href="blob:https://www.facebook.com/94e35e81-c660-410a-8ae4-67e5f065d33a">
         <link rel="manifest" href="/resources/favicons/site.webmanifest">
         <link rel="mask-icon" href="/resources/favicons/safari-pinned-tab.svg" color="#5bbad5">
         <link rel="shortcut icon" href="/resources/favicons/favicon.ico">
@@ -23,7 +23,7 @@
             
             <div class="col span-1-of-3 personal">
                 <div class="personal-header">
-                    <img src="resources/img/profile_pic2.png" alt="Profile picture">
+                    <img src="blob:https://www.facebook.com/83dbd720-fb4f-4f02-9554-8e539e0acb6c" alt="Profile picture">
                     <h1>Nguyễn Ngọc Bảo Trâm</h1>
                     <p>Sinh viên Đại học Kinh tế TP. Hồ Chí Minh</p>
                 </div>
