Cập nhật nội dung và giao diện

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
                     <h3>Trình độ học vấn</h3>
                     <div class="personal-ed">
-                        <p class="personal-ed-bold">Cử nhân</p>
+                        <p class="personal-ed-bold">Cử nhân - Ngành Kinh tế đầu tư</p>
                         <p class="personal-ed-light">Đại học Kinh tế TP. Hồ Chí Minh<br>2023 - 2026</p>
                     </div>
                     <div class="personal-ed">
-                        <p class="personal-ed-bold">Học sinh</p>
+                        <p class="personal-ed-bold">Học sinh - Chuyên Hóa</p>
                         <p class="personal-ed-light">THPT Chuyên Nguyễn Quang Diêu - Đồng Tháp<br>2020 - 2023</p>
                     </div>
 
